# pytestify

./: .coverage  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  pytest.ini
allure-results/: 00d173e9-9d8c-4ac9-bbb3-6456fb45c384-container.json  012d7821-57a2-4ad1-90f9-4f37b9dcfb66-container.json  0227c733-18cd-442a-b8b0-a4c5fc394a08-result.json  0383d7f7-16a4-4f59-8082-f89e0fbd8bdb-container.json  03e062e7-2c18-4c8a-8eb2-b07798f04414-attachment.txt  03f76f47-4770-49bf-bf5d-a905681f9106-result.json  05259b1c-0057-4611-906d-2333a5bc7748-container.json  0542e181-179e-4011-a0bd-a8e6121aa4eb-result.json  057a82fd-88ad-4625-af27-2c781a29410e-result.json  073360a3-132b-46cc-8a85-8792cd65f1e8-result.json  083cac81-36f5-47ff-b2f4-b82158c5068a-result.json  096545c0-9066-4213-97f8-77a0ee39b09f-result.json  0d6e0c43-c6dd-4c6c-890b-7180fca122af-attachment.txt  0fbd9683-cdcb-407b-b96e-10712385c8c0-result.json  0ffb0ae7-ab01-4918-b3bf-850a48a10294-result.json  10e4e675-85bd-42de-a899-8ce548d6a94d-container.json  11e51ff0-7e6b-4f65-9927-73ac30808a59-result.json  1280bb81-60e1-4462-8712-ee85ca199474-result.json  13e1d0cf-d141-40e7-ad65-e8753615c8a2-result.json  14e033b9-fa86-4765-99e8-443e144a2ae5-container.json  151ae166-3e3f-4add-bb79-2d6956449a60-container.json  16a24d24-2342-4605-b95d-e6134a8f5851-result.json  199deb0a-2bbb-4359-8aa4-1760e1e4c54e-attachment.txt  1a560c3b-86f9-440a-ae22-7b3b26a44a18-result.json  1ab6533a-c423-4a83-8dec-e7f4d491a64d-result.json  1b8a3f1f-7df6-4319-9847-3e3fe85d5e74-container.json  (+263 more)
(+31 files in other folders)
