[tool.poetry]
name = "pytestify"
version = "0.1.0"
description = "A base Python testing framework using pytest."
authors = ["Javed Ansari <qabyjavedansari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
requests = "^2.32.3"
pytest-mock = "^3.14.0"
jsonschema = "^4.23.0"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
